--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -32,11 +32,11 @@
     "react-hook-form": "^7.51.5",
     "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
-    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-table-component": "^1.2.2",
+    "react-native-ui-datepicker": "^2.0.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10"
   },
