--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-table-component": "^1.2.2",
     "react-native-ui-datepicker": "^2.0.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-sqlite": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
